--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Cotton-Kingdom-volume-2-of-2-b-A-traveller-s-observations-on-cotton-and-slavery-in-the-Am__72677
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72677-h/images/cover.jpg
 creator:
   author:
     agent_name: Olmsted, Frederick Law
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/45460
     wikipedia: https://en.wikipedia.org/wiki/Frederick_Law_Olmsted
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72677#The-Cotton-Kingdom-volume-2-of-2-b-A-traveller-s-observations-on-cotton-and-slavery-in-the-Am_
 gutenberg_issued: '2024-01-11'
 gutenberg_type: Text
 identifiers:
